first beta